# duck-tools

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  dist-workspace.toml
.github/workflows/: ci.yml  publish-extension.yml
ducky-cli/: Cargo.toml
ducky-cli/src/: main.rs
ducky-cli/wix/: main.wxs
ducky-core/: Cargo.toml
ducky-core/benches/: compile.rs
ducky-core/examples/: profile_compile.rs
ducky-core/src/: compiler.rs  constants.rs  encoder.rs  errors.rs  language.rs  lexer.rs  lib.rs  parser.rs  preprocessor.rs
ducky-core/tests/: integration_test.rs  test4.txt  test6.txt
ducky-fmt/: Cargo.toml
ducky-fmt/src/: lib.rs
ducky-lint/: Cargo.toml
ducky-lint/src/: lib.rs
ducky-lsp/: Cargo.toml
ducky-lsp/src/: backend.rs  call_hierarchy.rs  code_actions.rs  code_lens.rs  completions.rs  definition.rs  diagnostics.rs  document.rs  document_highlight.rs  document_symbol.rs  folding_range.rs  formatter.rs  hover.rs  inlay_hints.rs  linked_editing.rs  main.rs  on_type_formatting.rs  range_formatting.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs
ducky-lsp/wix/: main.wxs
src/: constants.rs  errors.rs  language.rs  lib.rs  main.rs
tests/: integration_test.rs  test1.txt  test2.txt  test3.txt  test5.txt  test7.txt
vscode-extension/: README.md  language-configuration.json  package-lock.json  package.json
vscode-extension/fileicons/: duckyscript-icon-theme.json
vscode-extension/src/: extension.ts  extensionCompletions.ts  extensions.json  semanticTokens.ts
