[package]
name = "ducky-cli"
version.workspace = true
edition = "2024"

[[bin]]
name = "duck"
path = "src/main.rs"

[dependencies]
ducky-core = { path = "../ducky-core" }
ducky-fmt = { path = "../ducky-fmt" }
ducky-lint = { path = "../ducky-lint" }
clap = { workspace = true, features = ["derive"] }
sha2.workspace = true
hex.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml = { workspace = true }
anyhow.workspace = true
