[package]
name = "ducky-core"
version.workspace = true
edition = "2024"

[lib]
name = "ducky_core"
path = "src/lib.rs"

[dependencies]
regex.workspace = true
lazy_static.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
sha2.workspace = true
hex.workspace = true
