[package]
name = "ducky-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true


[lib]
name = "ducky_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
sha2.workspace = true
hex.workspace = true
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "compile"
harness = false

[lints]
workspace = true
