[package]
name = "ducky-lint"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ducky-core = { path = "../ducky-core" }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
